Eevee Image Texture Box mapping inconsistent with Cycles if object is scaled #62178

Closed
opened 2019-03-04 11:37:20 +01:00 by Ludvik Koutny · 6 comments
Contributor

System Information
Operating system: Windows 10
Graphics card: GTX1080Ti

Blender Version
Broken: 2.8 latest master
Worked: Probably never

Short description of error
Eevee Image Texture Box mapping is inconsistent with Cycles output if object is scaled. The fact that it works but unreliably is even more dangerous than if it did not work at all.
Left is Eevee and right is Cycles:
image.png

Exact steps for others to reproduce the error
1, Open the attached blend file:MountainMappingBug.zip
2, Switch right viewport to Rendered mode
3, Notice the difference in the result despite Eevee having support for Box mapping

Result: Eevee box mapping result is different if the object is scaled

Expected: Eevee box mapping result is identical to Cycles in all cases, even if the object is scaled.

**System Information** Operating system: Windows 10 Graphics card: GTX1080Ti **Blender Version** Broken: 2.8 latest master Worked: Probably never **Short description of error** Eevee Image Texture Box mapping is inconsistent with Cycles output if object is scaled. The fact that it works but unreliably is even more dangerous than if it did not work at all. Left is Eevee and right is Cycles: ![image.png](https://archive.blender.org/developer/F6758894/image.png) **Exact steps for others to reproduce the error** 1, Open the attached blend file:[MountainMappingBug.zip](https://archive.blender.org/developer/F6758906/MountainMappingBug.zip) 2, Switch right viewport to Rendered mode 3, Notice the difference in the result despite Eevee having support for Box mapping Result: Eevee box mapping result is different if the object is scaled Expected: Eevee box mapping result is identical to Cycles in all cases, even if the object is scaled.
Author
Contributor

Added subscriber: @Rawalanche

Added subscriber: @Rawalanche
Clément Foucault was assigned by Sebastian Parborg 2019-03-04 12:40:16 +01:00

Added subscriber: @you.le

Added subscriber: @you.le

I'm not sure, but it seems there is something in cycles code which seems not in eevee's code:

When we apply this, it seems both have the same behaviour:

p.diff

Maybe the codes to compare are in D:\Compilation\Blender\BFBlenderSources\intern\cycles\render\nodes.cpp for Cycles and
D:\Compilation\Blender\BFBlenderSources\source\blender\nodes\shader\nodes\node_shader_tex_image.c for EEVEE

I'm not sure, but it seems there is something in cycles code which seems not in eevee's code: When we apply this, it seems both have the same behaviour: [p.diff](https://archive.blender.org/developer/F6879529/p.diff) Maybe the codes to compare are in D:\Compilation\Blender\BFBlenderSources\intern\cycles\render\nodes.cpp for Cycles and D:\Compilation\Blender\BFBlenderSources\source\blender\nodes\shader\nodes\node_shader_tex_image.c for EEVEE

I think the issue is caused by the Orco optimization I did for Eevee. Investigating...

I think the issue is caused by the Orco optimization I did for Eevee. Investigating...

This issue was referenced by 42dd888b98

This issue was referenced by 42dd888b98b598c240f78302b857fa60add08ca5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62178
No description provided.