Fix T62178 Eevee: Texture Box mapping not matching Cycles if object is scaled

The wrong transformation was used. Add a new matrix specially for this case.

This also fix the Node texture coordinate that was suffering the same issue.