source/blender/nodes/shader/nodes/node_shader_tex_image.c
@@ -123,12 +123,9 @@ static int node_shader_gpu_tex_image(GPUMaterial *mat, bNode *node, bNodeExecDat
 			GPU_stack_link(mat, node, gpu_node_name, in, out, GPU_image(ima, iuser, isdata));
 			break;
 		case SHD_PROJ_BOX:
-			GPU_link(mat, "direction_transform_m4v3", GPU_builtin(GPU_VIEW_NORMAL),
-			                                          GPU_builtin(GPU_INVERSE_VIEW_MATRIX),
-			                                          &norm);
-			GPU_link(mat, "direction_transform_m4v3", norm,
-			                                          GPU_builtin(GPU_INVERSE_OBJECT_MATRIX),
-			                                          &norm);
+			GPU_link(mat, "mat3_mul", GPU_builtin(GPU_VIEW_NORMAL),
+			                          GPU_builtin(GPU_INVERSE_NORMAL_MATRIX),
+			                          &norm);
 			GPU_link(mat, gpu_node_name, in[0].link,
 			                             norm,
 			                             GPU_image(ima, iuser, isdata),
